@@ -41,17 +41,6 @@
 #undef Tcl_CreateHashEntry
 #undef Tcl_Panic
 
-/* Only provided in the stub table for backwards
- * binary compatibility.
- */
-#define TclFSGetNativePath getnativepath
-static const char *
-getnativepath(
-    Tcl_Obj *pathPtr)
-{
-    return Tcl_FSGetNativePath(pathPtr);
-}
-
 /*
  * WARNING: The contents of this file is automatically generated by the
  * tools/genStubs.tcl script. Any modifications to the function declarations
@@ -974,7 +963,7 @@ const TclStubs tclStubs = {
     Tcl_FSGetTranslatedPath, /* 466 */
     Tcl_FSEvalFile, /* 467 */
     Tcl_FSNewNativePath, /* 468 */
-    TclFSGetNativePath, /* 469 */
+    Tcl_FSGetNativePath, /* 469 */
     Tcl_FSFileSystemInfo, /* 470 */
     Tcl_FSPathSeparator, /* 471 */
     Tcl_FSListVolumes, /* 472 */
@@ -1135,7 +1124,6 @@ const TclStubs tclStubs = {
     Tcl_LoadFile, /* 627 */
     Tcl_FindSymbol, /* 628 */
     Tcl_FSUnloadFile, /* 629 */
-    Tcl_FSGetNativePath, /* 630 */
 };
 
 /* !END!: Do not edit above this line. */
